style css(fix) : nav-list don't display animation when stretch windows anymore

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -201,28 +201,28 @@ html {
   background: var(--onyx-1);
   padding: 1rem;
   border-radius: 8px;
-  transform: scale(0.8);
+  transform: scale(0);
   transform-origin: top right;
 
   display: flex;
   opacity: 0;
-  visibility: hidden;
+  visibility: visible;
   flex-direction: column;
-  transition: var(--transition);
 }
 
 .nav-list.active {
   opacity: 1;
   transform: scale(1);
   visibility: visible;
+  transition: var(--transition);
 }
 
 .nav-list--item {
+  position: relative;
   padding: 8px 15px;
   color: var(--white);
   font-size: var(--fs-3);
   transition: var(--transition);
-  position: relative;
 }
 
 
@@ -283,6 +283,7 @@ html {
     padding: unset;
     opacity: 1;
     visibility: visible;
+    transform: scale(1);
   }
 
   .nav-list--item::after {
